@@ -1,5 +1,6 @@
 package com.SWP391_G5_EventFlowerExchange.LoginAPI.service;
 
+import com.SWP391_G5_EventFlowerExchange.LoginAPI.dto.response.OrderDetailResponse;
 import com.SWP391_G5_EventFlowerExchange.LoginAPI.entity.*;
 import com.SWP391_G5_EventFlowerExchange.LoginAPI.repository.IOrderDetailRepository;
 import lombok.AccessLevel;
@@ -7,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
@@ -46,19 +48,43 @@ public class OrderDetailService implements IOrderDetailService {
         orderDetailRepository.deleteById(id);
     }
 
-    // New method implementation
     @Override
-    public List<OrderDetail> getOrderDetailsByOrderID(int orderID) {
-        return orderDetailRepository.findByOrder_OrderID(orderID);
+    public List<OrderDetailResponse> getOrderDetailsByOrderID(int orderID) {
+        List<OrderDetail> orderDetails = orderDetailRepository.findByOrder_OrderID(orderID);
+        List<OrderDetailResponse> responses = new ArrayList<>();
+
+        for (OrderDetail orderDetail : orderDetails) {
+            Order order = orderDetail.getOrder();
+            Delivery delivery = order.getDelivery(); // Get the delivery associated with the order
+
+            OrderDetailResponse response = new OrderDetailResponse(orderDetail, delivery);
+            responses.add(response);
+        }
+
+        return responses;
     }
+
 
     @Override
     public User getSellerByOrderID(int orderID) {
         List<OrderDetail> orderDetails = orderDetailRepository.findByOrder_OrderID(orderID);
         if (!orderDetails.isEmpty()) {
-            FlowerBatch flowerBatch = orderDetails.get(0).getFlowerBatch();
+            FlowerBatch flowerBatch = orderDetails.getFirst().getFlowerBatch();
+            if (flowerBatch == null) {
+                throw new RuntimeException("No flower batch found for order details");
+            }
+
             EventFlowerPosting posting = flowerBatch.getEventFlowerPosting();
-            return posting.getUser(); // Returns the seller (User) who created the post
+            if (posting == null) {
+                throw new RuntimeException("No event flower posting found for flower batch");
+            }
+
+            User seller = posting.getUser();
+            if (seller == null) {
+                throw new RuntimeException("No seller found for event flower posting");
+            }
+
+            return seller; // Returns the seller (User) who created the post
         }
         throw new RuntimeException("No order details found for order ID: " + orderID);
     }
